增加了index/abour/error页，并将error.html中的url占位符进行替换

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>测试数据页</title>
+	<title>首页</title>
 </head>
 <body>
-	
+	<h1> INDEX 页</h1>
 </body>
 </html>
