完善.active的样式；completedLength的计算

--- a/front/index.html
+++ b/front/index.html
@@ -63,7 +63,9 @@
 						(todo)=>todo.completed = bol
 					)}
 				}
-				,completedLength:"this.data.todos.length"
+				,completedLength:function(){
+					return this.data.todos.filter(todo=>todo.completed).length
+				}
 			}
 		})
 		new TodoMVC().$inject('#todoapp')
