--- a/front/index.html
+++ b/front/index.html
@@ -5,17 +5,19 @@
 	<title>regularjs - todo 练习页面</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script type="text/javascript" src="../resource/regular.js"></script>
+	<script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
+	<script type="text/javascript" src="store.js"></script>
 </head>
 <body>
 <!-- 	<h1>regularjs - todo 练习</h1>  -->	
 	<script type="template/regular" id="todomvc">
-		<input type="text" id="addTodo" name="addTodo" placeholder="新建todo项目" />
+		<input type="text" id="addTodo" name="addTodo" placeholder="新建todo项目" r-model={newTodo} on-enter={this.actions.addTodo(newTodo)}/>
 		<ul class="items">
 			{#list todos as todo}
 			<li class="item">
 				<input type="checkbox" class="toggleItem" r-model={todo.completed}/>
 				<span>{todo.descript}</span>
-				<button class="delete">删除</button>
+				<button class="delete" on-click={true}>删除</button>
 			</li>
 			{/list}
 		</ul>
@@ -34,26 +36,11 @@
 		
 	</div>
 	<script type="text/javascript">
-		var defaultData = {
-			todos:[{
-				descript:'第一条todo的项目'
-				,completed:true
-				,uid:new Date().getTime()
-			},{
-				descript:'第二条todo的项目'
-				,completed:false
-				,uid:new Date().getTime()
-			},{
-				descript:'第三条todo的项目'
-				,completed:true
-				,uid:new Date().getTime()
-			}]
-			,editing:null
-			,filter:'all'
-		}
+
+
 		var TodoMVC = Regular.extend({
 			template:'#todomvc'
-			,data:defaultData
+			,data:store.getState()
 			,computed:{
 				isAllCompleted:{
 					get:function(){
@@ -67,8 +54,29 @@
 					return this.data.todos.filter(todo=>todo.completed).length
 				}
 			}
+			,actions:Redux.bindActionCreators(actionGenerators,store.dispatch)
+
 		})
-		new TodoMVC().$inject('#todoapp')
+		TodoMVC.event('enter',function(elem,fire){
+				function update(ev){
+					if(ev.which == 13){
+						ev.preventDefault();
+						fire(ev)
+					}
+				}
+				Regular.dom.on(elem,'keypress',update);
+				return function destory(){
+					dom.off(elem,'keypress',update)
+				}
+			}
+		)
+		var todoMVC = new TodoMVC()
+		todoMVC.$inject('#todoapp')
+		//保证每次newTodo改变后todoMVC
+		store.subscribe(function(){
+			todoMVC.data = store.getState();
+			todoMVC.$update()
+		})
 	</script>
 </body>
 </html>
