--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="template/regular" id="todomvc">
 		<input type="text" id="addTodo" name="addTodo" placeholder="新建todo项目" on-enter={this.actions.addTodo($event)}/>
 		<ul class="items">
-			{#list todos as todo}
+			{#list visibleTodos as todo}
 			<li class="item">
 				<input type="checkbox" class="toggleItem" on-change={this.actions.changeTodoCompleted(todo.uid,todo.completed)} checked={todo.completed}/>
 				{#if editing==todo.uid}
