--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<script type="text/javascript" src="resource/regular.js"></script>
 </head>
 <body>
-<!-- 	<h1>regularjs - todo 练习</h1>  -->	
 	<div id="todoapp" class=""></div>
 	<script type="template/regular" id="todomvc">
+		<h1 class="title">regularjs - todo 练习</h1> 	
 		<input type="text" id="addTodo" name="addTodo" placeholder="新建todo项目" on-enter={this.actions.addTodo($event)}/>
 		<ul class="items">
 			{#list visibleTodos as todo}
@@ -21,19 +21,20 @@
 					<span class="showText" on-dblclick={this.actions.startEdit(todo.uid)}>{todo.descript}</span>
 				{/if}
 
-				<button class="delete" on-click={this.actions.deleteTodo(todo.uid)}>删除</button>
+				<button class="deleteButton" on-click={this.actions.deleteTodo(todo.uid)}>删除</button>
 			</li>
 			{/list}
 		</ul>
 		<footer class="control">
-			<span><strong>{todos.length}</strong> items </span>
 			<ul>
 				<li><a r-class={{active:filter=='all'}} href="javascript:void(0);" on-click={this.actions.changeFilter('all')}>all</a></li>
 				<li><a r-class={{active:filter=='active'}} href="javascript:void(0);" on-click={this.actions.changeFilter('active')}>active</a></li>
 				<li><a r-class={{active:filter=='completed'}} href="javascript:void(0);" on-click={this.actions.changeFilter('completed')}>completed</a></li>
 				<li><label><input type="checkbox" on-change={this.actions.changeAllTodoCompleted(!isAllCompleted)} checked={isAllCompleted} />toggle all</label> </li>
 			</ul>
-			<button on-click={this.actions.clearCompleted()}>clearm {completedLength} completed</button>
+			<br />
+			<span class="itemlength"><strong>{todos.length}</strong> items </span>
+			<button class="clearButton" on-click={this.actions.clearCompleted()}>clearm {completedLength} completed</button>
 		</footer>
 	</script>
 	<script type="text/javascript" src="./dist/bundle.js"></script>
