增加了一个设置cookie为0.8182967680133957的按钮，方便测试

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="resource/regular.js"></script>
 </head>
 <body>
+	<button onclick="javascript:document.cookie='userId=0.8182967680133957'">点击载入0.8182967680133957账号内容,刷新后生效</button>
 	<div id="todoapp" class=""></div>
 	<script type="template/regular" id="todomvc">
 		<h1 class="title">regularjs - todo 练习</h1> 	
