重构发出fetch的方法，将其放到redux的中间件中

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<li class="item">
 				<input type="checkbox" class="toggleItem" on-change={this.actions.changeTodoCompleted(todo.uid,todo.completed)} checked={todo.completed}/>
 				{#if editing==todo.uid}
-					<input class="edittext" type="text" on-enter={this.actions.changeTodo($event,todo.uid,todo.descript)} value={todo.descript} />
+					<input class="edittext" type="text" on-enter={this.actions.changeTodo($event,todo.uid,todo.descript)}  autofocus value={todo.descript} />
 				{#else}
 					<span class="showText" on-dblclick={this.actions.startEdit(todo.uid)}>{todo.descript}</span>
 				{/if}
