--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>regularjs - todo练习页面</title>
 	<link rel="stylesheet" type="text/css" href="./dist/main.css">
+	<link rel="stylesheet" type="text/css" href="./resource/todoMVC.css">
 	<script type="text/javascript" src="resource/regular.js"></script>
 </head>
 <body>
